syntax = "proto3";
package pull;

import "common.proto";

message Request {
    message Stream {
        string topic_name = 1;
        uint32 partition_id = 2;
        uint64 message_id = 3;
    }
    repeated Stream streams = 1;
    uint32 per_stream_limit_bytes = 2;
    uint32 timeout_millis = 3;
}

message Response {
    common.Response common = 1;
}
